--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,9 @@ docs = [
 pytest = "^7.0"
 pytest-cov = "^3.0"
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^2.20.0"
+
 [tool.semantic_release]
 branch = "main"
 version_toml = "pyproject.toml:tool.poetry.version"
