--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ python = "^3.7"
 Sphinx = {version = "^5.0", optional = true}
 sphinx-rtd-theme = {version = "^1.0", optional = true}
 myst-parser = {version = "^0.18", optional = true}
+aiolifx = "^0.8.6"
+typer = {extras = ["all"], version = "^0.6.1"}
 
 [tool.poetry.extras]
 docs = [
@@ -40,9 +42,10 @@ docs = [
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
 pytest-cov = "^4.0"
-
-[tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
+black = "^22.10.0"
+pytest-asyncio = "^0.19.0"
+async-timeout = "^4.0.2"
 
 [tool.semantic_release]
 branch = "main"
@@ -67,6 +70,8 @@ exclude_lines = [
 
 [tool.isort]
 profile = "black"
+force_sort_within_sections = true
+combine_as_imports = true
 known_first_party = ["aiolifx_themes", "tests"]
 
 [tool.mypy]
@@ -91,6 +96,8 @@ allow_untyped_defs = true
 [[tool.mypy.overrides]]
 module = "docs.*"
 ignore_errors = true
+
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
