--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          token: ${{ secrets.GH_TOKEN }}
           fetch-depth: 0
 
       # Run semantic release:
@@ -81,5 +82,5 @@ jobs:
       - name: Python Semantic Release
         uses: relekang/python-semantic-release@v7.32.1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GH_TOKEN }}
           pypi_token: ${{ secrets.PYPI_TOKEN }}
