ci: update ci.yaml with better job names
Signed-off-by: Avi Miller <me@dje.li>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     needs:
       - test
-      - lint
+      - codelint
       - commitlint
 
     steps:
