--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,8 +80,7 @@ jobs:
       # - Create GitHub release
       # - Publish to PyPI
       - name: Run Python Semantic Release
-        uses: relekang/python-semantic-release@v8.0.0
+        uses: relekang/python-semantic-release@v7.34.6
         with:
           github_token: ${{ secrets.GH_TOKEN }}
-          repository_username: __token__
-          repository_password: ${{ secrets.PYPI_TOKEN }}
+          pypi_token: ${{ secrets.PYPI_TOKEN }}
