--- a/.github/workflows/hacktoberfest.yml
+++ b/.github/workflows/hacktoberfest.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
       - uses: browniebroke/hacktoberfest-labeler-action@v2.3.0
         with:
-          github_token: ${{ secrets.GH_PAT }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
