chore(ci): revert back to upstream GitHub Actions
Signed-off-by: Avi Miller <me@dje.li>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,17 +73,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      # This action uses a custom version of Python Semantic Release v8
       - name: Python Semantic Release
         id: release
-        uses: Djelibeybi/python-semantic-release@v8-py311
+        uses: python-semantic-release/python-semantic-release@v9.0.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        # NOTE: DO NOT wrap the conditional in ${{ }} as it will always evaluate to true.
-        # See https://github.com/actions/runner/issues/1173
         if: steps.release.outputs.released == 'true'
 
       - name: Publish package distributions to GitHub Releases
@@ -91,3 +88,4 @@ jobs:
         if: steps.release.outputs.released == 'true'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ steps.release.outputs.tag }}
