--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,22 +24,18 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-
-# Documentation Dependencies
-Sphinx = {version = "^7.0.0", optional = true}
-sphinx-rtd-theme = {version = "^2.0.0", optional = true}
-myst-parser = {version = "^2.0.0", optional = true}
 aiolifx = "^1.0.0"
 typer = {extras = ["all"], version = "^0.9.0"}
 
-[tool.poetry.extras]
-docs = [
-    "myst-parser",
-    "sphinx",
-    "sphinx-rtd-theme",
-]
+[tool.poetry.group.docs]
+optional = true
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.docs.dependencies]
+Sphinx = {version = "^7.0.0", optional = true}
+sphinx-rtd-theme = {version = "^2.0.0", optional = true}
+myst-parser = {version = "^2.0.0", optional = true}
+
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
 pytest-cov = "^4.0"
 pre-commit = "^3.0.0"
@@ -49,9 +45,9 @@ async-timeout = "^4.0.2"
 
 [tool.semantic_release]
 branch = "main"
-version_toml = "pyproject.toml:tool.poetry.version"
-version_variable = "src/aiolifx_themes/__init__.py:__version__"
-build_command = "pip install poetry && poetry build"
+version_toml = ["pyproject.toml:tool.poetry.version"]
+version_variables = ["src/aiolifx_themes/__init__.py:__version__"]
+build_command = "poetry build"
 
 [tool.pytest.ini_options]
 addopts = "-v -Wdefault --cov=aiolifx_themes --cov-report=term-missing:skip-covered"
@@ -91,13 +87,11 @@ exclude = [
 
 [[tool.mypy.overrides]]
 module = "tests.*"
-allow_untyped_defs = true
+disallow_untyped_defs = false
 
 [[tool.mypy.overrides]]
 module = "docs.*"
 ignore_errors = true
-
-
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
