--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,13 +27,17 @@ python = "^3.12"
 aiolifx = "^1.0.0"
 typer = {extras = ["all"], version = "^0.12.0"}
 
-[tool.poetry.group.docs]
-optional = true
-
-[tool.poetry.group.docs.dependencies]
+# Documentation Dependencies
 Sphinx = {version = "^7.0.0", optional = true}
 sphinx-rtd-theme = {version = "^2.0.0", optional = true}
 myst-parser = {version = "^3.0.0", optional = true}
+
+[tool.poetry.extras]
+docs = [
+    "myst-parser",
+    "sphinx",
+    "sphinx-rtd-theme",
+]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
