--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,4 +66,5 @@ repos:
     rev: 1.7.9
     hooks:
       - id: bandit
-        args: [-x, tests]
+        args: ["-x", "tests", "-c", "pyproject.toml"]
+        additional_dependencies: ["bandit[toml]"]
