--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,17 @@ readme = "README.md"
 repository = "https://github.com/Djelibeybi/aiolifx-themes"
 documentation = "https://aiolifx-themes.readthedocs.io"
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
+    "Development Status :: 4 - Beta",
+    "Framework :: AsyncIO",
+    "Framework :: Pytest",
     "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
     "Natural Language :: English",
     "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Typing :: Typed"
 ]
 packages = [
     { include = "aiolifx_themes", from = "src" },
@@ -24,8 +30,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.12"
-aiolifx = "^1.0.0"
-typer = {extras = ["all"], version = "^0.12.0"}
+aiolifx = "^1.0.5"
 
 # Documentation Dependencies
 Sphinx = {version = "^7.0.0", optional = true}
@@ -43,9 +48,11 @@ docs = [
 pytest = "^7.0"
 pytest-cov = "^5.0.0"
 pre-commit = "^3.0.0"
-black = "^24.0.0"
 pytest-asyncio = "^0.23.0"
 async-timeout = "^4.0.2"
+black = "^24.4.2"
+rich = "^13.7.1"
+windows-curses = [{ platform = "windows", version = "^2.3.3" }]
 
 [tool.semantic_release]
 branch = "main"
@@ -56,6 +63,11 @@ build_command = "poetry build"
 [tool.pytest.ini_options]
 addopts = "-v -Wdefault --cov=aiolifx_themes --cov-report=term-missing:skip-covered"
 pythonpath = ["src"]
+faulthandler_timeout = 5
+log_cli = true
+
+[tool.bandit]
+skips = ["B311"]
 
 [tool.coverage.run]
 branch = true
@@ -70,9 +82,6 @@ exclude_lines = [
 
 [tool.isort]
 profile = "black"
-force_sort_within_sections = true
-combine_as_imports = true
-known_first_party = ["aiolifx_themes", "tests"]
 
 [tool.mypy]
 check_untyped_defs = true
