--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ sphinx-rtd-theme = {version = "^3.0.0", optional = true}
 myst-parser = {version = "^4.0.0", optional = true}
 pytest-asyncio = "^0.25.2"
 pytest = "^8.3.4"
+jinja2 = "^3.1.5"
 
 [tool.poetry.extras]
 docs = [
