--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,6 @@ aiolifx = "^1.1.0"
 Sphinx = {version = "^8.0.0", optional = true}
 sphinx-rtd-theme = {version = "^3.0.0", optional = true}
 myst-parser = {version = "^4.0.0", optional = true}
-pytest-asyncio = "^0.25.2"
-pytest = "^8.3.4"
 jinja2 = "^3.1.5"
 
 [tool.poetry.extras]
@@ -48,10 +46,10 @@ docs = [
 ]
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3"
+pytest = "^8.2"
 pytest-cov = "^6.0.0"
 pre-commit = "^4.0.0"
-pytest-asyncio = "^0.25.0"
+pytest-asyncio = "^0.24"
 async-timeout = "^5.0.0"
 black = "^24.4.2"
 rich = "^13.7.1"
@@ -68,6 +66,7 @@ addopts = "-v -Wdefault --cov=aiolifx_themes --cov-report=term-missing:skip-cove
 pythonpath = ["src"]
 faulthandler_timeout = 5
 log_cli = true
+asyncio_default_fixture_loop_scope = "session"
 
 [tool.bandit]
 skips = ["B311"]
