fix: remove Python upper bound
Signed-off-by: Avi Miller <me@dje.li>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ packages = [
 "Changelog" = "https://github.com/Djelibeybi/aiolifx-themes/blob/main/CHANGELOG.md"
 
 [tool.poetry.dependencies]
-python = ">=3.12,<3.14"
+python = "^3.12"
 aiolifx = "^1.1.0"
 
 # Documentation Dependencies
